# mini-instapay

./: .gitignore  Instapay.cpp  LICENSE  README.md  Source2.cpp  otp test.sln
mini-instapay/: CMakeLists.txt  mini-instapay.cpp  mini-instapay.h
mini-instapay/enc_temp_folder/6318e4996ac4c1517cff4e694eba5f8/: mini-instapay.cpp
nana-master/: .gitignore
temp/nana/v142_Debug_x64/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
temp/nana/v143_Debug_x64/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
temp/nana/v143_Debug_x64/nana.tlog/: CL.10028.write.1.tlog  CL.10676.write.1.tlog  CL.10748.write.1.tlog  CL.13872.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  nana.lastbuildstate
